<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_backgroud_color"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <include layout="@layout/layout_default_title"></include>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="安全防护"
        android:layout_marginTop="@dimen/default_radius"
        android:layout_marginLeft="@dimen/default_margin"
        android:textColor="@color/default_content_color_1"
        android:textSize="@dimen/default_content_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="@dimen/default_radius"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="指纹开启"
            android:gravity="center_vertical"
            android:textColor="@color/default_font_color"
            android:textSize="@dimen/default_content_size"
            />
        <com.example.wsq.android.view.SwitchView
            android:id="@+id/sv_switchBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_Withdraw"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_remind"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_radius"
        android:textColor="@color/default_content_color_1"
        android:textSize="@dimen/default_list_item_content_size"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_account_remind"
        android:layout_marginLeft="@dimen/default_margin"
        android:textColor="@color/default_content_color_1"
        android:textSize="@dimen/default_list_item_content_size"
        android:layout_marginTop="@dimen/default_radius"
        />

        <LinearLayout
            android:id="@+id/tv_setting_Withdraw_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:layout_marginTop="10dp"
            >


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/defalut_layout_height"
            android:text="设置提现密码"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_content_size"
            android:textColor="@color/default_font_color"
            />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/image_right_next"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_update_Withdraw_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:layout_marginTop="1dp"
            android:visibility="gone"
            >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/defalut_layout_height"
            android:text="@string/str_update_withdraw_psd"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_content_size"
            android:textColor="@color/default_font_color"
            />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/image_right_next"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_tv_forget_Withdraw_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:layout_marginTop="1dp"
            android:visibility="gone"
            >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/defalut_layout_height"
            android:text="@string/str_forget_withdraw_psd"
            android:gravity="center_vertical"
            android:textColor="@color/default_font_color"
            android:textSize="@dimen/default_content_size"
            />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/image_right_next"
                />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_version"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:textColor="@color/default_content_color_1"
        android:textSize="@dimen/default_content_size"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_version_code"
            android:gravity="center_vertical"
            android:textColor="@color/default_font_color"
            android:textSize="@dimen/default_content_size"
            />
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:gravity="center_vertical"
            android:textSize="@dimen/default_title_size"
            android:textColor="@color/default_content_color_2"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cache_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defalut_layout_height"
        android:background="@color/color_white"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_clear_canche"
            android:gravity="center_vertical"
            android:textColor="@color/default_font_color"
            android:textSize="@dimen/default_content_size"
            />
        <TextView
            android:id="@+id/tv_cacheSize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="9.0M"
            android:gravity="center_vertical"
            android:textSize="@dimen/default_title_size"
            android:textColor="@color/default_content_color_2"
            />
    </LinearLayout>

</LinearLayout>
